# discord-root-me-scoreboard

./: .env.template  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: runner.yml
docker/: Dockerfile  docker-compose.yml
root_me_scoreboard_bot/: main.py
root_me_scoreboard_bot/commands/: __init__.py
root_me_scoreboard_bot/tasks/: __init__.py  update_profile.py
root_me_scoreboard_bot/utils/: api.py  config.py  secrets.py
tests/: test_root_me_api.py
